--- a/.github/workflows/content.yaml
+++ b/.github/workflows/content.yaml
@@ -53,3 +53,21 @@ jobs:
           file: sharp/content.Tests/merged.cobertura.xml
           flags: content
           fail_ci_if_error: true
+  container:
+    name: Container Build
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+      - name: Login to DockerHub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+      - name: Build and push
+        uses: docker/build-push-action@v5
+        with:
+          context: ./sharp/content
+          file: ./sharp/content/Dockerfile
+          push: true
+          tags: ${{ secrets.DOCKERHUB_USERNAME || 'app' }}/content:latest
