--- a/.github/workflows/content.yaml
+++ b/.github/workflows/content.yaml
@@ -19,7 +19,6 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-
       - name: Docker Compose
         working-directory: .github/chore
         run: |
@@ -28,14 +27,18 @@ jobs:
       - name: Setup C# environment
         uses: actions/setup-dotnet@v4
         with:
-          dotnet-version: '8.0.x'
+          dotnet-version: "8.0.x"
+
+      - name: Install FFmpeg
+        run: |
+          sudo apt-get update
+          sudo apt-get install ffmpeg
 
       - name: Install dependencies
         run: |
           dotnet tool install -g dotnet-coverage
           dotnet restore sharp/content/content.csproj
           dotnet restore sharp/content.Tests/content.Tests.csproj
-
 
       - name: Coverage
         working-directory: sharp/content.Tests
@@ -46,6 +49,7 @@ jobs:
           CONNECTION_STRING: "server=localhost;port=33306;database=content;user=mysql_user;password=mysql;SslMode=none;Max Pool Size=2;AllowPublicKeyRetrieval=True; "
           USER_STRING: "http://localhost:50051"
           VOTE_STRING: "http://localhost:8080"
+          FFPROBE_PATH: "/usr/bin/ffprobe"
 
       - name: Upload coverage
         uses: codecov/codecov-action@v1
