--- a/.github/workflows/users.yaml
+++ b/.github/workflows/users.yaml
@@ -42,7 +42,7 @@ jobs:
           go-version: "1.21"
       - name: Install dependencies
         run: |
-          go mod download
+          go mod tidy
       - name: Run tests
         run: |
           go test -v ./... -coverprofile=coverage.txt -covermode=atomic
