feat: add open telemetry

--- a/replica/essync/Dockerfile
+++ b/replica/essync/Dockerfile
@@ -1,5 +1,8 @@
 FROM python:3.11-alpine
 COPY . /src
-RUN pip install elasticsearch
-RUN pip install mysql-replication
+RUN pip install elasticsearch && \
+   pip install mysql-replication && \
+    pip install opentelemetry-api && \
+    pip install opentelemetry-sdk && \
+    pip install opentelemetry-exporter-otlp-proto-http
 CMD ["python", "/src/cdc.py"]
