--- a/replica/essync/config.json
+++ b/replica/essync/config.json
@@ -23,5 +23,15 @@
       "https://somehost:9200"
     ],
     "ca_certs": "/etc/ssl/certs/ca-certificates.crt"
+  },
+  "opentelemetry.resource": {
+    "attributes": {
+      "service.name": "mysql-to-elasticsearch",
+      "service.namespace": "default",
+      "service.instance.id": "mysql-to-elasticsearch-1"
+    }
+  },
+  "otlp_exporter": {
+    "endpoint": "http://localhost:4318/v1/traces"
   }
 }
