feat: client resilience

--- a/graal/pom.xml
+++ b/graal/pom.xml
@@ -28,6 +28,7 @@
     <description>sharing-comment</description>
     <properties>
         <java.version>21</java.version>
+        <resilience4jVersion>2.1.0</resilience4jVersion>
     </properties>
     <dependencies>
         <dependency>
@@ -111,6 +112,16 @@
             <artifactId>jjwt-jackson</artifactId> <!-- or jjwt-gson if Gson is preferred -->
             <version>0.12.3</version>
             <scope>runtime</scope>
+        </dependency>
+        <dependency>
+            <groupId>io.github.resilience4j</groupId>
+            <artifactId>resilience4j-circuitbreaker</artifactId>
+            <version>${resilience4jVersion}</version>
+        </dependency>
+        <dependency>
+            <groupId>io.github.resilience4j</groupId>
+            <artifactId>resilience4j-all</artifactId>
+            <version>${resilience4jVersion}</version>
         </dependency>
     </dependencies>
 
