--- a/graal/pom.xml
+++ b/graal/pom.xml
@@ -29,6 +29,7 @@
     <properties>
         <java.version>21</java.version>
         <resilience4jVersion>2.1.0</resilience4jVersion>
+        <jjwtVersion>0.11.5</jjwtVersion>
     </properties>
     <dependencies>
         <dependency>
@@ -99,19 +100,17 @@
         <dependency>
             <groupId>io.jsonwebtoken</groupId>
             <artifactId>jjwt-api</artifactId>
-            <version>0.12.3</version>
+            <version>${jjwtVersion}</version>
         </dependency>
         <dependency>
             <groupId>io.jsonwebtoken</groupId>
             <artifactId>jjwt-impl</artifactId>
-            <version>0.12.3</version>
-            <scope>runtime</scope>
+            <version>${jjwtVersion}</version>
         </dependency>
         <dependency>
             <groupId>io.jsonwebtoken</groupId>
-            <artifactId>jjwt-jackson</artifactId> <!-- or jjwt-gson if Gson is preferred -->
-            <version>0.12.3</version>
-            <scope>runtime</scope>
+            <artifactId>jjwt-jackson</artifactId>
+            <version>${jjwtVersion}</version>
         </dependency>
         <dependency>
             <groupId>io.github.resilience4j</groupId>
@@ -139,6 +138,11 @@
             <plugin>
                 <groupId>org.graalvm.buildtools</groupId>
                 <artifactId>native-maven-plugin</artifactId>
+                <configuration>
+                    <metadataRepository>
+                        <enabled>true</enabled>
+                    </metadataRepository>
+                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
