feat: add refer, update validator, update jackson, add rpc serializer

--- a/.github/workflows/comment.yaml
+++ b/.github/workflows/comment.yaml
@@ -67,6 +67,7 @@ jobs:
           flags: comments
           files: ./graal/target/site/jacoco/jacoco.xml
           verbose: true
+          token: ${{ secrets.CODECOV_TOKEN }}
 
   release:
     runs-on: ubuntu-latest
