--- a/graal/comments.yaml
+++ b/graal/comments.yaml
@@ -23,22 +23,29 @@ paths:
     get:
       summary: "GET comments/main"
       operationId: "getMainCommentList"
+      tags:
+        - "comments"
       security:
-        - { }
-        - BearerAuth: [ ]
+        - {}
+        - BearerAuth: []
       parameters:
+        - name: "type"
+          in: "query"
+          required: true
+          schema:
+            oneOf:
+              - type: "string"
+                enum: [ "video", "post", "music" ]
         - name: "belong_to"
           in: "query"
           required: true
           schema:
-            type: "integer"
-            format: "int64"
+            type: "string"
         - name: "page"
           in: "query"
-          required: true
+          required: false
           schema:
-            type: "integer"
-            format: "int64"
+            type: "string"
         - name: "size"
           in: "query"
           required: false
@@ -50,35 +57,42 @@ paths:
         "200":
           description: "OK"
           content:
-            '*/*':
+            "*/*":
               schema:
                 $ref: "#/components/schemas/CommentResult"
   /comments/reply:
     get:
       summary: "GET comments/reply"
       operationId: "getReplyCommentList"
+      tags:
+        - "comments"
       security:
-        - { }
-        - BearerAuth: [ ]
+        - {}
+        - BearerAuth: []
       parameters:
+        - name: "type"
+          in: "query"
+          required: true
+          schema:
+            oneOf:
+              - type: "string"
+                enum: [ "video", "post", "music" ]
         - name: "belong_to"
           in: "query"
           required: true
           schema:
-            type: "integer"
-            format: "int64"
+            type: "string"
         - name: "reply_to"
           in: "query"
           required: true
           schema:
-            type: "integer"
-            format: "int64"
+            type: "string"
         - name: "page"
           in: "query"
-          required: true
+          required: false
           schema:
-            type: "integer"
-            format: "int64"
+            type: "string"
+
         - name: "size"
           in: "query"
           required: false
@@ -90,15 +104,17 @@ paths:
         "200":
           description: "OK"
           content:
-            '*/*':
+            "*/*":
               schema:
                 $ref: "#/components/schemas/ReplyResult"
   /comments:
     post:
       summary: "POST comments"
       operationId: "createComment"
+      tags:
+        - "comments"
       security:
-        - BearerAuth: [ ]
+        - BearerAuth: []
       requestBody:
         content:
           application/json:
@@ -109,15 +125,17 @@ paths:
         "200":
           description: "OK"
           content:
-            '*/*':
+            "*/*":
               schema:
                 $ref: "#/components/schemas/Comment"
   /comments/{id}:
     delete:
       summary: "DELETE comments/{id}"
       operationId: "deleteComment"
+      tags:
+        - "comments"
       security:
-        - BearerAuth: [ ]
+        - BearerAuth: []
       parameters:
         - name: "id"
           in: "path"
@@ -138,8 +156,10 @@ paths:
     post:
       summary: "POST comments/action/like/{id}"
       operationId: "voteComment"
+      tags:
+        - "comments"
       security:
-        - BearerAuth: [ ]
+        - BearerAuth: []
       parameters:
         - name: "id"
           in: "path"
@@ -152,9 +172,11 @@ paths:
           description: "OK"
     delete:
       summary: "DELETE comments/action/like/{id}"
+      tags:
+        - "comments"
       operationId: "cancelVoteComment"
       security:
-        - BearerAuth: [ ]
+        - BearerAuth: []
       parameters:
         - name: "id"
           in: "path"
@@ -166,7 +188,7 @@ paths:
         "200":
           description: "OK"
 security:
-  - BearerAuth: [ ]
+  - BearerAuth: []
 
 components:
   securitySchemes:
@@ -220,9 +242,11 @@ components:
         reply_to:
           type: "integer"
           format: "int64"
-        belong_to:
+        refer_to:
           type: "integer"
           format: "int64"
+        belong_to:
+          type: "string"
         created_at:
           type: "string"
           format: "date-time"
@@ -271,6 +295,14 @@ components:
         reply_to:
           type: "integer"
           format: "int64"
+        refer_to:
+          type: "integer"
+          format: "int64"
         belong_to:
           type: "integer"
           format: "int64"
+        type:
+          type: "string"
+          oneOf:
+            - type: "string"
+              enum: [ "video", "post", "music" ]
