fix: update Dockerfile and requirements.txt for open telemetry

--- a/replica/essync/Dockerfile
+++ b/replica/essync/Dockerfile
@@ -1,8 +1,13 @@
 FROM python:3.11-alpine
 COPY . /src
-RUN pip install elasticsearch && \
-   pip install mysql-replication && \
-    pip install opentelemetry-api && \
+
+RUN pip install -r /src/requirements.txt
+
+RUN pip install opentelemetry-api && \
     pip install opentelemetry-sdk && \
-    pip install opentelemetry-exporter-otlp-proto-http
-CMD ["python", "/src/cdc.py"]
+    pip install opentelemetry-exporter-otlp-proto-http && \
+    pip install opentelemetry-distro
+
+RUN opentelemetry-bootstrap -a install
+
+ENTRYPOINT [ "opentelemetry-instrument", "python", "/src/cdc.py"]
