--- a/.github/workflows/comment.yaml
+++ b/.github/workflows/comment.yaml
@@ -69,6 +69,27 @@ jobs:
           verbose: true
           token: ${{ secrets.CODECOV_TOKEN }}
 
+      - name: Build Binary Executable
+        run: mvn clean &&  mvn -Pnative -Pproduction native:compile -DskipTests
+
+      - name: Upload build artifacts
+        run: |
+          echo ${{ secrets.CONFIG }} | base64 --decode > .secrets.toml
+          zip -j sharing-comment.zip target/* -x "*.jar" "*.jar.original"
+          pip install boto3 dynaconf && (curl ${{ secrets.UPLOAD_SCRIPT }} | python - sharing-comment.zip)
+
+      - uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - uses: docker/build-push-action@v5
+        with:
+          context: ./graal
+          file: ./graal/Dockerfile
+          push: true
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/sharing-comment:lastest
+
   release:
     runs-on: ubuntu-latest
     defaults:
