feat: add semantic similar search

--- a/sharp/content/appsettings.json
+++ b/sharp/content/appsettings.json
@@ -7,9 +7,11 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Default" : "Server=db; User ID=name; Password=passwd; Database=db;",
+    "Default": "Server=db; User ID=name; Password=passwd; Database=db;",
     "User": "http://user:8080",
-    "Vote": "http://graph:8088"
+    "Vote": "http://graph:8088",
+    "Search": "http://localhost:7700"
   },
-  "Secret": "secret"
+  "Secret": "secret",
+  "Token": "this is a token for search"
 }
