--- a/sharp/content/content.csproj
+++ b/sharp/content/content.csproj
@@ -40,8 +40,9 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
-    <PackageReference Include="MySqlConnector" Version="2.3.3" />
-    <PackageReference Include="MySqlConnector.DependencyInjection" Version="2.3.1" />
+    <PackageReference Include="npgsql" Version="8.0.5" />
+    <PackageReference Include="Npgsql.DependencyInjection" Version="8.0.5" />
+    <PackageReference Include="Npgsql.OpenTelemetry" Version="8.0.5" />
     <PackageReference Include="OpenTelemetry.Exporter.OpenTelemetryProtocol" Version="1.7.0" />
     <PackageReference Include="OpenTelemetry.Exporter.Prometheus.AspNetCore" Version="1.7.0-rc.1" />
     <PackageReference Include="OpenTelemetry.Extensions.Hosting" Version="1.7.0" />
