--- a/graal/Dockerfile
+++ b/graal/Dockerfile
@@ -1,6 +1,5 @@
 FROM debian:bookworm-slim
-
+ARG APP_NAME=sharing-comment
 WORKDIR /app
-COPY ["./target/sharing-comment", "/app/sharing-comment"]
-
-ENTRYPOINT ["/app/sharing-comment"]
+COPY ["./target/${APP_NAME}","/app/app"]
+ENTRYPOINT ["/app/app"]
