--- a/sharp/content/appsettings.json
+++ b/sharp/content/appsettings.json
@@ -10,7 +10,8 @@
     "Default": "Server=db; User ID=name; Password=passwd; Database=db;",
     "User": "http://user:8080",
     "Vote": "http://graph:8088",
-    "Search": "http://localhost:7700"
+    "Search": "http://localhost:7700",
+    "Redis": "localhost:6379"
   },
   "Secret": "secret",
   "Token": "this is a token for search"
