--- a/sharp/content/content.csproj
+++ b/sharp/content/content.csproj
@@ -44,6 +44,7 @@
     <PackageReference Include="OpenTelemetry.Instrumentation.Http" Version="1.9.0" />
     <PackageReference Include="Riok.Mapperly" Version="4.1.0" />
     <PackageReference Include="FluentValidation" Version="11.10.0" />
+    <PackageReference Include="StackExchange.Redis" Version="2.8.24" />
   </ItemGroup>
 
   <ItemGroup>
