--- a/.github/workflows/comment.yaml
+++ b/.github/workflows/comment.yaml
@@ -82,36 +82,15 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
+      - uses: docker/metadata-action@v5
+        id: meta
+        with:
+          images: ${{ secrets.DOCKERHUB_USERNAME }}/sharing-comment
+
+
       - uses: docker/build-push-action@v5
         with:
           context: ./graal
           file: ./graal/Dockerfile
-          push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/sharing-comment:prerelease
-
-  release:
-    runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: ./graal
-    if: github.ref == 'refs/heads/main'
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-      - uses: graalvm/setup-graalvm@v1
-        with:
-          java-version: '21'
-          distribution: 'graalvm' # See 'Options' for all available distributions
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-      - name: Native Image Build
-        run: mvn -Pnative spring-boot:build-image -DskipTests
-
-      - uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-
-      - name: Push to Docker Hub
-        run: |
-          docker tag sharing-comment:0.0.1-SNAPSHOT ${{ secrets.DOCKERHUB_USERNAME }}/sharing-comment:latest
-          docker push ${{ secrets.DOCKERHUB_USERNAME }}/sharing-comment:latest
+          push: ${{ github.event != 'pull_request' }}
+          tags: ${{ steps.meta.outputs.tags}}
